minor error in test harness

--- a/testHarness.html
+++ b/testHarness.html
@@ -11,7 +11,7 @@
 
       function plot(){
 
-      var domain = parser_get_domain(-5, 5);
+      var domain = parser_get_domain(-5, 5, 1000);
 
       console.log(domain);
       
